data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_2672.wast
;; 3. **Test Description**: Test a `block` with a `br_table` instruction where none of the supplied indices match the available labels, thus expecting a jump to the default branch.    - **Constraint**: Ensure that the `br_table` handles this scenario without misbehaving and correctly jumps to the default label.    - **Edge Case**: Ensures proper handling of non-matching indices.

(assert_invalid
  (module (func $br_table_default_correctness (param i32) (result i32)
    (block (result i32)
      (br_table 1 2 3 (get_local 0) (i32.const 5)) (i32.const 10)
    )
  ))
  "invalid label index"
)